Add Vercel rewrites and headers for favicon accessibility

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,7 +3,17 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "rewrites": [
+    {
+      "source": "/favicon.ico",
+      "destination": "/favicon.ico"
+    },
+    {
+      "source": "/icon.png",
+      "destination": "/icon.png"
+    }
+  ]
 }
 
 
