Remove rewrites from vercel.json - let Next.js handle static files automatically

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,17 +3,7 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "outputDirectory": ".next",
-  "rewrites": [
-    {
-      "source": "/favicon.ico",
-      "destination": "/favicon.ico"
-    },
-    {
-      "source": "/icon.png",
-      "destination": "/icon.png"
-    }
-  ]
+  "outputDirectory": ".next"
 }
 
 
